force-app/main/default/objects/Interest_Suspense__c/Interest_Suspense__c.object-meta.xml
<CustomObject>
    <label>Interest Suspense</label>
    <nameField>
        <displayFormat>INR-SUS-{000000}</displayFormat>
        <label>Interest Suspense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Suspenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>