force-app/main/default/objects/Interest_Suspense__c/fields/Accrued_Suspense__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Suspense__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Accrued Suspense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>