force-app/main/default/objects/Interest_Suspense__c/fields/Closing_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Closing_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Transaction</label>
    <referenceTo>Loan_Transaction__c</referenceTo>
    <relationshipLabel>Interest Suspenses (Closing Transaction)</relationshipLabel>
    <relationshipName>Interest_Suspenses_Closing</relationshipName>
    <type>Lookup</type>
</CustomField>