force-app/main/default/objects/Interest_Suspense__c/fields/Opening_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Opening_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opening Transaction</label>
    <referenceTo>Loan_Transaction__c</referenceTo>
    <relationshipLabel>Interest Suspenses</relationshipLabel>
    <relationshipName>Interest_Suspenses</relationshipName>
    <type>Lookup</type>
</CustomField>