force-app/main/default/objects/Interest_Suspense__c/fields/Suspense_Amount_Updated__c.field-meta.xml
<CustomField>
    <fullName>Suspense_Amount_Updated__c</fullName>
    <label>Suspense Amount Updated</label>
    <type>Date</type>
</CustomField>