force-app/main/default/objects/Interest_Suspense__c/fields/SuspenseOption__c.field-meta.xml
<CustomField>
    <fullName>SuspenseOption__c</fullName>
    <label>Suspense Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apply</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
            <value>
                <fullName>Capitalize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>